@@ -1,5 +1,11 @@
 2007-07-02  Dan Williams  <dcbw@redhat.com>
 
+	Suppress activation of wireless devices until 5 seconds after NM starts,
+	to allow time for wired devices to determine their link state before starting
+	mesh association.
+
+2007-07-02  Dan Williams  <dcbw@redhat.com>
+
 	* src/nm-device-802-11-mesh-olpc.c
 		- (channel_failure_handler): handle failure of p2p mesh case too
 
